--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 #server.port=8087
+server.contextPath=/RestfullWebServicesApplication
 spring.jpa.show-sql=true
 #spring.h2.console.enabled=true
 spring.jpa.hibernate.ddl-auto=update
